--- a/rentals/templates/rentals/checkout.html
+++ b/rentals/templates/rentals/checkout.html
@@ -27,7 +27,7 @@
 		</div>
 	</section>
 	<!-- end page title -->
-	
+
 	<!-- section -->
 	<div class="section">
 		<div class="container">
@@ -36,28 +36,28 @@
 				<div class="col-12 col-lg-8">
 					<!-- cart -->
 					<div class="cart">
-                        
+
 						<div class="form">
 
                             <div class="hideable_shipping_form">
-                           
+
                             <p style="color: whitesmoke !important;"> Shipping Address </p>
-                           
-                            <select class="form__select" name="shipping_area" id="shipping_area" required>
+
+                            <!-- <select class="form__select" name="shipping_area" id="shipping_area" required>
                                 <option value="" disabled selected hidden>Select your region </option>
 
                                 {% if address_regions %}
-                              
+
                                 {% for reg in address_regions %}
                                 <option value="{{reg.slug}}"> {{reg.display}} - ({{reg.areas}}) </option>
                                 {% endfor %}
                                 {% endif %}
-                            </select>
+                            </select> -->
                             <input type="text" name="shipping_address" class="form__input" placeholder="House Address" required>
-    
+
                             <input type="text" name="shipping_city" class="form__input" placeholder="LGA" required>
-                       
-         
+
+
                              </div>
                             <br>
                             <br>
@@ -66,42 +66,42 @@
                             <p style="color: whitesmoke !important;"> Billing Address </p>
                             <input type="text" name="billing_address" class="form__input" placeholder="Address" required>
                             <!-- <input type="text" name="billing_address2" class="form__input" placeholder="Apartment Address" required> -->
-                          
+
                             <input type="text" name="billing_city" class="form__input" placeholder="City" required>
                             <input type="text" name="billing_state" class="form__input" placeholder="State" required>
 
                             </div>
 
-                            <div>
+                            <!-- <div>
                                 <p style="color: whitesmoke !important;"> Pick Up Option </p>
                                 <select class="form__select" name="pickup_option" id="pickup_option" required>
                                     <option value="" disabled selected hidden>Do you want us to pickup ?</option>
                                     <option id="no_pickup" value="no_pickup"> NO</option>
                                     <option id="pickup" value="pickup"> YES </option>
-                              
+
                                 </select>
 
 
-                                
 
-                            </div>
+
+                            </div> -->
 
                             <div style="display: none;" class="hidden_pickup_address" id="hidden_pickup_address">
 
 
-                                <select  class="form__select" name="hidden_pickup_region" id="hidden_pickup_region">
+                                <!-- <select  class="form__select" name="hidden_pickup_region" id="hidden_pickup_region">
                                     <option value="" disabled selected hidden>Select your region </option>
-    
+
                                     {% if address_regions %}
-                                  
+
                                     {% for reg in address_regions %}
                                     <option value="{{reg.slug}}"> {{reg.display}} - ({{reg.areas}}) </option>
                                     {% endfor %}
                                     {% endif %}
-                                </select>
+                                </select> -->
 
                                 <input type="text" name="pickup_address" class="form__input" placeholder="House Address">
-    
+
                                 <input type="text" name="pickup_city" class="form__input" placeholder="LGA">
 
 
@@ -110,7 +110,7 @@
 
                         </div>
 
-						
+
 					</div>
 					<!-- end cart -->
 				</div>
@@ -127,18 +127,19 @@
 					<div action="#" class="form">
                         <p style="color: whitesmoke !important;">My Rental Cart Summary </p>
                         <input type="text"  class="form__input" value="Que Total: ₦{{que.get_que_order_total|intcomma}}" disabled>
-                        <p style="color: whitesmoke !important; ">Shipping/Pickup Fee </p>
-						<input type="text"  class="form__input" id="final_shipping_fee" value="Shipping Fee: ₦{{que.get_shipping_total|intcomma}}" disabled>
-						<input style="display: none;" type="text"  id="final_pickup_fee" class="form__input" value="Pickup Fee: ₦{{que.get_pickup_total|intcomma}}" disabled>
-						
-						
+                        <!-- <p style="color: whitesmoke !important; ">Shipping/Pickup Fee </p> -->
+                        <p style="color: whitesmoke !important; ">Shipping Fee </p>
+						<input type="text"  class="form__input" id="final_shipping_fee" value="Shipping Fee: ₦1,500" disabled>
+						<!-- <input style="display: none;" type="text"  id="final_pickup_fee" class="form__input" value="Pickup Fee: ₦{{que.get_pickup_total|intcomma}}" disabled> -->
+
+
 						<span class="form__text">Your personal data will be used to process your order, support your experience throughout this website, and for other purposes described in our privacy policy.</span>
 						<button type="submit" class="form__btn">>> Payment</button>
 					</div>
 
-                    
+
 				</div>
-			</div>	
+			</div>
         </form>
 		</div>
 	</div>
@@ -159,7 +160,7 @@ $(document).ready(function(){
         $('#final_pickup_fee').show()
         } else {
         $('#hidden_pickup_address').hide();
-     
+
         }
     })
 
@@ -230,23 +231,23 @@ console.log(user)
             //     "hidden_pickup_region":null,
             //     "pickup_address":null,
             //     "pickup_city":null,
-            //     "pickup_option":form.pickup_option.value, 
+            //     "pickup_option":form.pickup_option.value,
             //     }
             // }
 
-            var pickupInfo = {
-                "hidden_pickup_region":form.hidden_pickup_region.value,
-                "pickup_address":form.pickup_address.value,
-                "pickup_city":form.pickup_city.value,
-                "pickup_option":form.pickup_option.value,
-            }
+            // var pickupInfo = {
+            //     // "hidden_pickup_region":form.hidden_pickup_region.value,
+            //     "pickup_address":form.pickup_address.value,
+            //     "pickup_city":form.pickup_city.value,
+            //     "pickup_option":form.pickup_option.value,
+            // }
 
-            
+
 
             var shippingInfo = {
                 'shipping_address':form.shipping_address.value,
 				'shipping_city':form.shipping_city.value,
-				'shipping_area':form.shipping_area.value
+				// 'shipping_area':form.shipping_area.value
             }
 
 
@@ -257,12 +258,12 @@ console.log(user)
             }
 
 
-            
 
-            
+
+
             console.log("shipping info", shippingInfo)
             console.log("billing info", billingInfo)
-            console.log("pickup Info", pickupInfo)
+
 
 
             var url = "/process_checkout/"
@@ -273,7 +274,7 @@ console.log(user)
 	    			'X-CSRFToken':csrftoken,
                 },
 
-                body:JSON.stringify({'shippingInfo':shippingInfo, 'billingInfo': billingInfo, 'pickupInfo':pickupInfo}),
+                body:JSON.stringify({'shippingInfo':shippingInfo, 'billingInfo': billingInfo}),
             })
             .then((response) => response.json())
             .then((data) => {
@@ -281,7 +282,7 @@ console.log(user)
 
                 console.log(data)
 
-               
+
 
                 profile_id = data['the_profile_id']
                 console.log(profile_id)
