--- a/shop/templates/shop/shopHome.html
+++ b/shop/templates/shop/shopHome.html
@@ -2,6 +2,31 @@
 
 {% load static %}
 {% load humanize %}
+{% block extra_styles %}
+<style type="text/css">
+    .card__buyy {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: calc(100% - 500px);
+  /* width: 200px; */
+  height: 44px;
+  border-radius: 6px;
+  background-color: #fe2349 !important;
+  color: #fff;
+  font-weight: 600;
+  font-size: 14px;
+  letter-spacing: 0.8px;
+  line-height: 16px;
+}
+
+.card__buyy:hover {
+  background-color: #ff9909;
+  color: #fff;
+}
+</style>
+{% endblock extra_styles %}
 
 {% block content %}
 <!-- home -->
@@ -27,7 +52,7 @@
             <!-- end title -->
         </div>
     </div>
- 
+
     <!-- carousel -->
     <div class="owl-carousel section__carousel section__carousel--big" id="carousel0">
         <!-- big card -->
@@ -55,42 +80,42 @@
                     <li class="wn"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M480,265H232V444l248,36V265Z'/><path d='M216,265H32V415l184,26.7V265Z'/><path d='M480,32,232,67.4V249H480V32Z'/><path d='M216,69.7,32,96V249H216V69.7Z'/></svg></li>
                 </ul> -->
 
-                <div class="card__price">
+                <!-- <div class="card__price">
                     {% if val.discount_price %}
                     <span>₦{{val.discount_price}}</span><s>₦{{val.price}}</s>
                     {% else %}
                     <span>₦{{val.price}}</span>
                     {% endif %}
-                </div>
+                </div> -->
 
-                <div class="card__actions">
+                <!-- <div class="card__actions">
                     <button data-product="{{val.id}}" data-action="add" class="card__buy add-btn update-cart">Add to Cart</button>
-                    <a style="display: none;" id="btn_atc_{{val.id}}" href="#added_to_cart_modal_{{val.id}}" class="open-modal"></a> 
+                    <a style="display: none;" id="btn_atc_{{val.id}}" href="#added_to_cart_modal_{{val.id}}" class="open-modal"></a>
                     <button class="card__favorite"  type="button">
                         <svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M352.92,80C288,80,256,144,256,144s-32-64-96.92-64C106.32,80,64.54,124.14,64,176.81c-1.1,109.33,86.73,187.08,183,252.42a16,16,0,0,0,18,0c96.26-65.34,184.09-143.09,183-252.42C447.46,124.14,405.68,80,352.92,80Z' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg>
                     </button>
-                </div>
+                </div> -->
             </div>
 
             <!-- added to cart modal  -->
-            
+
 
 
             <div id="added_to_cart_modal_{{val.id}}" class="zoom-anim-dialog mfp-hide modal">
                 <button class="modal__close" type="button"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><line x1='368' y1='368' x2='144' y2='144' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><line x1='368' y1='144' x2='144' y2='368' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg></button>
-        
+
                 <h3 class="modal__title">{{val.name}} updated in the Cart</h3>
-        
+
                 <div class="modal__group">
                     <label class="modal__label" for="value">Item cost:</label>
                     <span class="modal__value">{% if val.discount_price %} ₦{{val.discount_price|intcomma}} {% else %} ₦{{val.price}} {% endif %}</span>
                 </div>
-        
+
                 <div class="modal__group">
                     <label class="modal__label" for="method"><b>Checkout Now</b></label>
-    
+
                     <!-- <span class="modal__text"> {{val.name}}  has been added to cart, Checkout now!</span> -->
-        
+
                     <span class="modal__text"> Head over to <a href="/shop/cart/">Shopping Cart </a>  to checkout  or continue shopping !</span>
                 </div>
             </div>
@@ -104,7 +129,7 @@
         {% endfor %}
         {% endif %}
 
-    
+
     </div>
     <!-- end carousel -->
 </section>
@@ -117,12 +142,12 @@
 <!-- <section class="section">
     <div class="container">
         <div class="row">
-   
+
             <div class="col-12">
                 <div class="section__title-wrap section__title-wrap--single">
                     <h2 class="section__title">Browse All releases</h2>
 
-                   
+
                 </div>
             </div>
 
@@ -141,7 +166,7 @@
                         <span class="card__new">Pre-order</span>
                         {% endif %}
                     </a>
- 
+
                     <ul class="card__platforms">
                         <li class="ps"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M399.77,203c-.8-17.1-3.3-34.5-10.8-50.1a82.45,82.45,0,0,0-16.5-23.2,105.59,105.59,0,0,0-21.3-16.3c-17.1-10.2-37.5-17-84.4-31S192,64,192,64V422.3l79.9,25.7s.1-198.8.1-299.5v-3.8c0-9.3,7.5-16.8,16.1-16.8h.5c8.5,0,15.5,7.5,15.5,16.8V278c11,5.3,29.2,9.3,41.8,9.1a47.79,47.79,0,0,0,24-5.7,49.11,49.11,0,0,0,18.4-17.8,78.64,78.64,0,0,0,9.9-27.3C400.07,225.5,400.17,214.2,399.77,203Z'/><path d='M86.67,357.8c27.4-9.8,89.3-29.5,89.3-29.5V281.1s-76.5,24.8-111.3,37.1c-8.6,3.1-17.3,5.9-25.7,9.5-9.8,4.1-19.4,8.7-28.1,14.8a26.29,26.29,0,0,0-9.2,10.1,17.36,17.36,0,0,0-.5,13.6c2,5.1,5.8,9.3,10.1,12.6,7.8,5.9,17.1,9.5,26.4,12.2a262.42,262.42,0,0,0,88.4,13.3c14.5-.2,36-1.9,50-4.4v-42s-11,2.5-41.3,12.5c-4.6,1.5-9.2,3.3-14,4.3a104.87,104.87,0,0,1-21.6,2.2c-6.5-.3-13.2-.7-19.3-3.1-2.2-1-4.6-2.2-5.5-4.6-.8-2,.3-4,1.7-5.4C78.87,360.9,82.87,359.3,86.67,357.8Z'/><path d='M512,345.9c-.1-6-3.7-11.2-7.9-15-7.1-6.3-15.9-10.3-24.7-13.5-5.5-1.9-9.3-3.3-14.7-5-25.2-8.2-51.9-11.2-78.3-11.3-8,.3-23.1.5-31,1.4-21.9,2.5-67.3,15.4-67.3,15.4v48.8s67.5-21.6,96.5-31.8a94.43,94.43,0,0,1,30.3-4.6c6.5.2,13.2.7,19.4,3.1,2.2.9,4.5,2.2,5.5,4.5.9,2.6-.9,5-2.9,6.5-4.7,3.8-10.7,5.3-16.2,7.4-41,14.5-132.7,44.7-132.7,44.7v47s117.2-39.6,170.8-58.8c8.9-3.3,17.9-6.1,26.4-10.4,7.9-4,15.8-8.6,21.8-15.3A19.74,19.74,0,0,0,512,345.9Z'/></svg></li>
                         <li class="xb"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M126.8,248.3c39.7-58.6,77.9-92.8,77.9-92.8s-42.1-48.9-92.8-67.4l-3.3-.8A224.13,224.13,0,0,0,77.2,391C77.2,386.6,77.8,320.7,126.8,248.3Z'/><path d='M480,256A223.71,223.71,0,0,0,403.4,87.3l-3.2.9c-50.7,18.5-92.9,67.4-92.9,67.4s38.2,34.2,77.9,92.8c49,72.4,49.6,138.3,49.5,142.7A222.8,222.8,0,0,0,480,256Z'/><path d='M201.2,80.9c29.3,13.1,54.6,34.6,54.6,34.6s25.5-21.4,54.8-34.6c36.8-16.5,64.9-11.3,72.3-9.5a224.06,224.06,0,0,0-253.8,0C136.3,69.6,164.3,64.3,201.2,80.9Z'/><path d='M358.7,292.9C312.4,236,255.8,199,255.8,199s-56.3,37-102.7,93.9c-39.8,48.9-54.6,84.8-62.6,107.8l-1.3,4.8a224,224,0,0,0,333.6,0l-1.4-4.8C413.4,377.7,398.5,341.8,358.7,292.9Z'/></svg></li>
@@ -160,23 +185,23 @@
                     <button data-product="{{item.id}}" data-action="add" class="list__buy add-btn update-cart" type="button">
                         <svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><line x1='256' y1='112' x2='256' y2='400' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><line x1='400' y1='256' x2='112' y2='256' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg>
                     </button>
-                    <a style="display: none;" id="btn_atc_{{item.id}}" href="#added_to_cart_modal_{{item.id}}" class="open-modal"></a> 
-                    
+                    <a style="display: none;" id="btn_atc_{{item.id}}" href="#added_to_cart_modal_{{item.id}}" class="open-modal"></a>
+
                 </div>
 
                 <div id="added_to_cart_modal_{{item.id}}" class="zoom-anim-dialog mfp-hide modal">
                     <button class="modal__close" type="button"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><line x1='368' y1='368' x2='144' y2='144' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><line x1='368' y1='144' x2='144' y2='368' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg></button>
-            
+
                     <h3 class="modal__title">{{item.name}} updated in the Cart</h3>
-            
+
                     <div class="modal__group">
                         <label class="modal__label" for="value">Item cost:</label>
                         <span class="modal__value">{% if item.discount_price %} ₦{{item.discount_price|intcomma}} {% else %} ₦{{item.price|intcomma}} {% endif %}</span>
                     </div>
-            
+
                     <div class="modal__group">
                         <label class="modal__label" for="method"><b>Checkout Now</b></label>
-    
+
                         <span class="modal__text"> Head over to <a href="/shop/cart/">Shopping Cart </a>  to checkout  or continue shopping !</span>
                     </div>
                 </div>
@@ -190,13 +215,13 @@
 
 
 
-        
+
 
             {% if all_items.has_other_pages %}
             <div class="col-12">
                 <div class="paginator">
                     <div class="paginator__counter">
-                    
+
                     </div>
 
                     <ul class="paginator__wrap">
@@ -206,7 +231,7 @@
                                 <svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><polyline points='244 400 100 256 244 112' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px'/><line x1='120' y1='256' x2='412' y2='256' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px'/></svg>
                             </a>
                         </li>
-                      
+
                         {% endif %}
 
                         {% for i in all_items.paginator.page_range %}
@@ -232,7 +257,7 @@
 
 
         </div>
-	
+
     </div>
 </section> -->
 <!-- end section -->
@@ -265,29 +290,30 @@
 									<option value="{{cat.name}}">{{cat.name}}</option>
                                     {% endfor %}
                                     {% endif %}
-									
-                                    
+
+
 								</select>
 							</div>
 						</div>
 
-						
+
 
                         <button class="header__btn" type="submit">
-                            
+
                             <svg  xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M221.09,64A157.09,157.09,0,1,0,378.18,221.09,157.1,157.1,0,0,0,221.09,64Z' style='fill:none;stroke-miterlimit:10;stroke-width:32px'/><line x1='338.29' y1='338.29' x2='448' y2='448' style='fill:none;stroke-linecap:round;stroke-miterlimit:10;stroke-width:32px'/></svg>
                         </button>
 
 						<div class="sort__results">Showing {{showing_cat}}</div>
-                       
+
 					</div>
 				</div>
 			</div>
         </form>
 			<!-- catalog -->
+            {% if all_items|length > 0 %}
 			<div class="row category">
 
-				{% if all_items %}
+
 				{% for item in all_items %}
 				<!-- card -->
 				<!-- <div class="col-12 col-sm-6 col-md-4 col-xl-3 col-xl-20"> -->
@@ -300,7 +326,7 @@
 							{% endif %}
 						</a>
 
-						
+
 
 						<div class="card__title">
 							<h3><a href="{{item.get_absolute_url}}">{{item.name}}</a></h3>
@@ -312,26 +338,26 @@
 						</div>
 
 						<div class="card__actions">
-                            
+
 							<button data-product="{{item.id}}" data-action="add" class="card__buy add-btn update-cart" type="button">Add to cart</button>
-							<a style="display: none;" id="btn_atc_{{item.id}}" href="#added_to_cart_modal_{{item.id}}" class="open-modal"></a> 
-							
+							<a style="display: none;" id="btn_atc_{{item.id}}" href="#added_to_cart_modal_{{item.id}}" class="open-modal"></a>
+
 						</div>
 					</div>
 				</div>
 
 				{% endfor %}
-				{% endif %}
-				
+
+
 
 
 				{% if all_items.has_other_pages %}
 					<div class="col-12">
 						<div class="paginator">
 							<div class="paginator__counter">
-						
+
 							</div>
-							
+
 							<ul class="paginator__wrap">
 								{% if all_items.has_previous %}
 								<li class="paginator__item paginator__item--prev">
@@ -339,7 +365,7 @@
 										<svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><polyline points='244 400 100 256 244 112' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px'/><line x1='120' y1='256' x2='412' y2='256' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px'/></svg>
 									</a>
 								</li>
-							
+
 								{% endif %}
 
 								{% for i in all_items.paginator.page_range %}
@@ -358,16 +384,52 @@
 								</li>
 								{% endif %}
 							</ul>
-							
+
 						</div>
 					</div>
-					{% endif %}
-					
+                    {% endif %}
 
 
-				
+
+
 			</div>
-			<!-- end catalog -->	
+            {% else %}
+                <!-- article -->
+                <div class="article">
+                    <div class="row align-items-center">
+                        <div class="col-12">
+                            <!-- article content -->
+                            <div class="article__content article__content--page" style="text-align: center;">
+                                <!-- <img src="{% static 'img/abt_us.jpg' %}" alt=""> -->
+
+                                <h1>No vendors in your location</h1>
+                                <p>Sorry! There are no vendors in your location. <br>
+                                    To rent or buy games directly from GameOn; chat with our admin. <br>
+                                    To become a vendor in your location; sign up here </p>
+
+
+
+
+                                    <div class="container" style="margin-top: 5%;">
+                                        <a  class="card__buyy" href="https://vendor.gameon.com.ng/accounts/signup" target="_blank"> Become a Vendor </a>
+                                    </div>
+
+
+
+
+
+
+
+
+                            </div>
+                            <!-- end article content -->
+                        </div>
+                    </div>
+                </div>
+                <!-- end article -->
+            {% endif %}
+
+			<!-- end catalog -->
 		</div>
 	</section>
 	<!-- end section -->
@@ -398,7 +460,7 @@
                         <svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M112,111V401c0,17.44,17,28.52,31,20.16l247.9-148.37c12.12-7.25,12.12-26.33,0-33.58L143,90.84C129,82.48,112,93.56,112,111Z' style='fill:none;stroke-miterlimit:10;stroke-width:32px'/></svg>
                     </a>
                     <div class="post__content">
-                        
+
                         <h3 class="post__title"><a href="#">{{item.highlight_title}} </a></h3>
                         <div class="post__meta">
                             <span class="post__date"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M256,64C150,64,64,150,64,256s86,192,192,192,192-86,192-192S362,64,256,64Z' style='fill:none;stroke-miterlimit:10;stroke-width:32px'/><polyline points='256 128 256 272 352 272' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg> {{item.created_at|naturaltime}}</span>
@@ -408,7 +470,7 @@
                 </div>
             </div>
             {% endfor %}
-            
+
         </div>
     </div>
 </section>
