--- a/rentals/templates/rentals/not_available.html
+++ b/rentals/templates/rentals/not_available.html
@@ -16,7 +16,7 @@
 						<div style="text-align: center;" class="article__content article__content--page">
 							<img src="{% static 'img/abt_us.jpg' %}" alt="">
 
-							<h1>We are coming to your location soon!</h1>
+							<h1>We are coming to your location</h1>
 
 							<p> Oops, sorry! GameOn is not yet available in your location.</p>
 
