--- a/shop/templates/shop/shopHome.html
+++ b/shop/templates/shop/shopHome.html
@@ -2,31 +2,7 @@
 
 {% load static %}
 {% load humanize %}
-{% block extra_styles %}
-<style type="text/css">
-    .card__buyy {
-  display: inline-flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: calc(100% - 500px);
-  /* width: 200px; */
-  height: 44px;
-  border-radius: 6px;
-  background-color: #fe2349 !important;
-  color: #fff;
-  font-weight: 600;
-  font-size: 14px;
-  letter-spacing: 0.8px;
-  line-height: 16px;
-}
 
-.card__buyy:hover {
-  background-color: #ff9909;
-  color: #fff;
-}
-</style>
-{% endblock extra_styles %}
 
 {% block content %}
 <!-- home -->
@@ -401,31 +377,18 @@
                             <!-- article content -->
                             {% if location_pulled == True %}
                             <div class="article__content article__content--page" style="text-align: center;">
-                                <!-- <img src="{% static 'img/abt_us.jpg' %}" alt=""> -->
+
 
                                 <h1>No vendors in your location</h1>
                                 <p>Sorry! There are no vendors in your location. <br>
-                                    To rent or buy games directly from GameOn; chat with our admin. <br>
-                                    To become a vendor in your location; sign up here </p>
-
-
-
-
-                                    <div class="container" style="margin-top: 5%;">
-                                        <a  class="card__buyy" href="https://vendor.gameon.com.ng/accounts/signup" target="_blank"> Become a Vendor </a>
-                                    </div>
-
-
-
-
-
-
+                                    To rent or buy games directly from GameOn; <br> <a href="https://wa.me/2348103699838" target="_blank"> <strong> chat with our admin.</strong></a> <br>
+                                    To become a vendor in your location; <br> <a href="https://vendor.gameon.com.ng/accounts/signup" target="_blank"> <strong>sign up here</strong></a></p>
 
 
                             </div>
                             {% else %}
                             <div class="article__content article__content--page" style="text-align: center;">
-                                <!-- <img src="{% static 'img/abt_us.jpg' %}" alt=""> -->
+
 
                                 <h1>Location Services Required</h1>
                                 <p>Kindly allow us access your location to serve you better</p>
